Fixed display issue on small screens projects

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -44,7 +44,7 @@ body {
   background-color: #fff;
   border-radius: 1rem;
   box-shadow: 0px 0px 10px #ccc;
-  margin: 0 20px 20px 0;
+  margin: 0 0 20px 0;
 }
 
 .about-me-text-container2 {
