--- a/src/pages/projects/projects.css
+++ b/src/pages/projects/projects.css
@@ -1,15 +1,15 @@
-.timeline-event.left {
-  margin: 50px;
+.timeline-event {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 75%;
 }
-
-.timeline-event.right {
-  margin: 50px;
-}
-
 
 .timeline-event-image img {
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  
 }
 
 .timeline-event-content {
@@ -18,6 +18,7 @@
   border-radius: 10px;
   box-shadow: 0px 0px 10px #3498db;
   display: flex;
+  flex-wrap: nowrap;
 }
 
 
@@ -29,4 +30,11 @@
 .timeline-event {
   border-radius: 10px;
   padding: 15px;
+}
+
+@media only screen and (max-width: 800px) {
+  .timeline-event-content {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
